# napari-ome-tiff-reader

./: README.md  pyproject.toml
napari_ome_tiff_reader/: __init__.py  napari.yaml
